--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hlb/pnpm-test",
+  "name": "@hlb/pnpm-test-sdfjsf",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
