--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@hlb/pnpm-test-sdfjsf",
+  "name": "pnpm-test-sdfjsf",
   "version": "1.0.0",
-  "description": "",
+  "description": "test",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "bo",
   "license": "ISC"
 }
