--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
+  "type": "module",
   "keywords": [],
   "author": "bo",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pnpm-test-sdfjsf": "^1.0.0"
+  },
+  "devDependencies": {
+    "rollup": "^4.27.3"
+  }
 }
