--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pnpm-test-sdfjsf",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "test",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "build": "rollup -c"
   },
@@ -10,9 +10,6 @@
   "keywords": [],
   "author": "bo",
   "license": "ISC",
-  "dependencies": {
-    "pnpm-test-sdfjsf": "^1.0.0"
-  },
   "devDependencies": {
     "rollup": "^4.27.3"
   }
