--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,4 @@ strict-peer-dependencies=false
 shell-emulator=true
 package-manager-strict=false
 
-registry=https://registry.npmmirror.com
+# registry=https://registry.npmmirror.com
