--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pnpm-test-sdfjsf",
+  "name": "pnpm-test-sdfjsfq",
   "version": "1.0.4",
   "description": "test",
   "main": "dist/bundle.js",
